# Airline_Reservation_and_Management_System

./: README.md
.github/: copilot-instructions.md
AirlineSystem/: CMakeLists.txt  README.md
AirlineSystem/data/: aircraft.json  crew.json  flights.json  reservations.json  users.json
AirlineSystem/src/: main.cpp
AirlineSystem/src/domain/booking/: CashPayment.h  CreditCardPayment.h  PayPalPayment.h  Payment.cpp  Payment.h  PaymentStrategy.H  Reservation.cpp  Reservation.h
AirlineSystem/src/domain/flight/: Aircraft.cpp  Aircraft.h  CrewMember.cpp  CrewMember.h  Flight.cpp  Flight.h  FlightAttendant.cpp  FlightAttendant.h  Pilot.cpp  Pilot.h  Seat.cpp  Seat.h
AirlineSystem/src/domain/maintenance/: MaintenanceRecord.cpp  MaintenanceRecord.h
AirlineSystem/src/domain/user/: Administrator.cpp  Administrator.h  BookingAgent.cpp  BookingAgent.h  Passenger.cpp  Passenger.h  User.cpp  User.h
AirlineSystem/src/repository/: AircraftRepository.cpp  AircraftRepository.h  CrewRepository.cpp  CrewRepository.h  FlightRepository.cpp  FlightRepository.h  ReservationRepository.cpp  ReservationRepository.h  UserRepository.cpp  UserRepository.h
AirlineSystem/src/services/auth/: AuthService.cpp  AuthService.h
AirlineSystem/src/services/booking/: BookingService.cpp  BookingService.h  PaymentService.cpp  PaymentService.h  SeatService.cpp  SeatService.h
AirlineSystem/src/services/flight/: AircraftService.cpp  AircraftService.h  CrewService.cpp  CrewService.h  FlightService.cpp  FlightService.h
AirlineSystem/src/ui/: ApplicationUI.cpp  ApplicationUI.h  LoginUI.cpp  LoginUI.h  Menu.h
AirlineSystem/src/ui/admin/: AdminMenu.cpp  AdminMenu.h  ManageAircraftUI.cpp  ManageAircraftUI.h  ManageCrewUI.cpp  ManageCrewUI.h  ManageFlightsUI.cpp  ManageFlightsUI.h  ManageUserUI.cpp  ManageUserUI.h
AirlineSystem/src/ui/agent/: AgentMenu.cpp  AgentMenu.h
AirlineSystem/src/ui/passenger/: BookFlightUI.cpp  BookFlightUI.h  PassengerMenu.cpp  PassengerMenu.h  SearchFlightsUI.cpp  SearchFlightsUI.h
